--- a/gb/21/9/8/n13219395.md
+++ b/gb/21/9/8/n13219395.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxeqnh3506/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>赖清德：台商根留台湾 可强化供应链韧性</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13219397-515745-600x400.jpg" />
 <h6>副总统赖清德为“2021新东盟 新台商 新机会”论坛录制致词影片。（总统府提供）
 </h6>
 <hr>
-<p>【大纪元2021年09月08日讯】（大纪元记者李怡欣台湾台北报导）副总统<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>8日以录影方式为“2021新东盟 新<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a> 新机会”论坛致词时指出，为协助台商分散海外生产基地，减少对单一市场的过度依赖，政府积极推动“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E6%96%B0%E5%8D%97%E5%90%91%E6%94%BF%E7%AD%96.md#1">新南向政策</a>”，创造互利共赢的新合作模式；政府将持续强化台湾经济的体质与韧性，呼吁全球台商，根留台湾，不仅可强化产业<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>韧性，更能回应国际品牌客户的要求。</p>
-<p><ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>表示，美中贸易战与疫情下，各国思考建立中国外的第二个海外生产基地，加快全球产业<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>重组，印度及东南亚国家成各国企业优先选项。为协助<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a>分散海外生产基地，减少对单一市场过度依赖，政府推动“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E6%96%B0%E5%8D%97%E5%90%91%E6%94%BF%E7%AD%96.md#1">新南向政策</a>”创造互利共赢新合作模式，拉近台湾与周边国家的伙伴关系。</p>
+<p>【大纪元2021年09月08日讯】（大纪元记者李怡欣台湾台北报导）副总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>8日以录影方式为“2021新东盟 新<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a> 新机会”论坛致词时指出，为协助台商分散海外生产基地，减少对单一市场的过度依赖，政府积极推动“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E5%8D%97%E5%90%91%E6%94%BF%E7%AD%96.md#1">新南向政策</a>”，创造互利共赢的新合作模式；政府将持续强化台湾经济的体质与韧性，呼吁全球台商，根留台湾，不仅可强化产业<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>韧性，更能回应国际品牌客户的要求。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%96%E6%B8%85%E5%BE%B7.md#1">赖清德</a>表示，美中贸易战与疫情下，各国思考建立中国外的第二个海外生产基地，加快全球产业<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>重组，印度及东南亚国家成各国企业优先选项。为协助<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E5%95%86.md#1">台商</a>分散海外生产基地，减少对单一市场过度依赖，政府推动“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E5%8D%97%E5%90%91%E6%94%BF%E7%AD%96.md#1">新南向政策</a>”创造互利共赢新合作模式，拉近台湾与周边国家的伙伴关系。</p>
 <p>赖清德指出，新南向政策与欧美印太战略、日本南进政策强化供应链韧性的目标相契合，有助台商在全球布局抢先机。政府也积极争取加入“跨太平洋伙伴全面进步协定”(CPTPP)。政府强化台湾经济韧性，成台商坚强后盾，最短时间内控制疫情外，打造台湾成为“高阶制造、高科技研发、半导体先进制程、绿能发展”四大中心。</p>
 <p>面对美中战略竞争不断加剧，台湾位于亚太经贸枢纽，人才充沛，创新动能强劲，加上智慧财产权、资安保护完善等优越条件，国际企业纷纷加码投资台湾；全球经贸秩序重整关键时刻，政府持续审慎应对，维持台湾经济稳定成长，掌握变局中机会，协助台商因应经贸局势变化，多元布局全球。</p>
 <p>责任编辑：陈玟绮</p>
@@ -16,46 +16,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13222047.md#1">台振兴券即将上路 调查：4成6企业将进行人事扩编</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/9/n13221870.md#1">金管会：民众缴税推升7月刷卡金额创同期次高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219578.md#1">台经长：电商提有利小商家方案 希望纳入五倍券</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219502.md#1">晶圆代工供不应求 联电：今年产能已卖完</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219433.md#1">龚明鑫：国发基金正在寻找“农业”台积电</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219398.md#1">渣打东盟商机调查 企业最爱国家排行出炉</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218931.md#1">本土疫情未解 林伯丰：不应调涨基本工资</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217222.md#1">2020年专利前2大领域 台积电、瑞昱居首</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217171.md#1">货柜运价窜升 航运业上半年大赚千亿</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616531.md#1">因应减碳潮流 台工业局推动中小企业辅导</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616540.md#1">中小企业喊买不到绿电 台经部：将简化程序</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616239.md#1">彭博：新台币成亚洲市场俄乌风险外溢指标</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616359.md#1">对俄曝险逾千亿 台寿险公会：只占0.46%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616363.md#1">外资丢、内资捡 投信：台股具4大底蕴</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616288.md#1">国泰世华ATM半年两次当机 台金管会提两大改进措施</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616256.md#1">台开董事会确认董座为邱于芸 吴子嘉发重讯否认</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613849.md#1">不畏乌俄战争！法人买超151亿 台指数大涨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614029.md#1">续增再生能源建置 蔡英文：助企业净零转型</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614027.md#1">高雄钢铁人撇中资 台民团质疑幕后有金主</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/30/n11013193.md#1" target="_blank">北京人赞颂法轮功美好 谢李洪志大师洪恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220324.md#1">【时事纵横】毛忌日官方沉默 美日新动作抗共</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/31/n13200641.md#1">【思想领袖】麦克基：社会主义的蛊惑欺骗</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/6/n13215231.md#1">怕成下个赵薇？谢霆锋认退加拿大国籍引热议</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/6/n13214171.md#1">《尚气》横扫周末台美票房 梁朝伟做了2个突破</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/8/n13219395.htm">赖清德：台商根留台湾 可强化供应链韧性</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/8/n13219395.htm">赖清德：台商根留台湾 可强化供应链韧性</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13219395.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/8/n13219395.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
